tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_minimal_replay_fixture_suppresses_worked_for_separator_vt100.snap
---
source: tui/src/app_server_render.rs
assertion_line: 4419
expression: contents
---















› test prompt


• First update.

• Second update.

• Third update.
