tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_minimal_suppresses_worked_for_separator_vt100.snap
---
source: tui/src/app_server_render.rs
assertion_line: 4368
expression: terminal.backend().vt100().screen().contents()
---













› test prompt
