tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_potter_project_succeeded_block_vt100.snap
---
source: tui/src/app_server_render.rs
assertion_line: 4471
expression: terminal.backend().vt100().screen().contents()
---













› test prompt


• - Finished the project.

─ CodexPotter summary: 4 rounds in 24m 34s ─────────────────────────────────────

  Git:               fb827a2 -> 662d232
  Task history:      .codexpotter/projects/2026/02/01/11/MAIN.md
  Loop more rounds:  codex-potter resume 2026/02/01/11
