tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_potter_round_started.snap
---
source: tui/src/app_server_render.rs
expression: rendered
---
• CodexPotter: iteration round 1/15 (gpt-5.2 xhigh [fast])
