tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_request_permissions.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&cell.display_lines(width))
---
• Requested permissions
  └ Reason: Select a workspace root
    Network: enabled
    FileSystem write: /Users/me/project
