tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_request_user_input.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&cell.display_lines(width))
---
• User input requested
  └ Confirm: Proceed with the plan?
